finished radio button validation

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <input type="text" name="email" id="email" >
             <label for="phone">Phone numnber:</label> 
             <input type="text" name="phone" id="phone" >
-            <input type="radio" id="male" name="group" value="Male">Male
-            <input type="radio" id="female" name="group" value="Female">Female
+            <input type="radio" id="male" name="gender" value="Male">Male
+            <input type="radio" id="female" name="gender" value="Female">Female
             </br>
             <label for="list">Phone numnber:</label> 
             <select class="list" id="list">
