Added in the GET method on the form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <form>
+        <form action="thankyou.html" method="GET">
             <label for="name">Name:</label> 
             <input type="text" name="name" id="name" >
             <label for="email">Email:</label> 
@@ -19,7 +19,7 @@
             <input type="text" name="phone" id="phone" >
             <input type="radio" id="male" name="gender" value="Male">Male
             <input type="radio" id="female" name="gender" value="Female">Female
-            </br>
+            <br>
             <label for="list">Phone numnber:</label> 
             <select class="list" id="list">
                 <option value="Springfield">Springfield</option> 
