added in the window.location.search

--- a/thankyou.html
+++ b/thankyou.html
@@ -8,6 +8,11 @@
     </head>
 
     <body>
+        <p id="thankyou">
+            <script>
+                document.write(window.location.search);
+            </script>
+        </p>
         
     </body>
 </html>
